deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-deployment
  labels:
    app: camunda
spec:
  replicas: 2
  selector:
    matchLabels:
      app: camunda
  template:
    metadata:
      labels:
        app: camunda
    spec:
      containers:
        - name: camunda-container
          image: soldann/camunda-docker:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: camunda-service
spec:
    type: ClusterIP
    selector:
        app: camunda
    ports:
    - port: 8080
      targetPort: 8080
      name: http
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "28800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "28800"
spec:
  rules:
  - http:
      paths:
      - path: /camunda
        pathType: Prefix
        backend:
          serviceName: camunda-service
          servicePort: 8080
      - path: /camunda-welcome(/|$)
        pathType: Exact
        backend:
          serviceName: camunda-service
          servicePort: 8080
      - path: /engine-rest
        pathType: Prefix
        backend:
          serviceName: camunda-service
          servicePort: 8080
