calicoPolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tcp-6379
spec:
  selector: color == 'red'
  ingress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: name == 'default'
    destination:
      ports:
      - 6379
